...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_antropometria_description"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
...

            <TextView
                android:id="@+id/paciente_descrition_antropometria_circum_braco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/paciente_descrition_antropometria_circum_coxa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/paciente_descrition_antropometria_circum_abdomen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/paciente_descrition_antropometria_circum_cintura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/paciente_descrition_antropometria_circum_quadril"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/paciente_descrition_antropometria_altura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/paciente_descrition_antropometria_peso_atual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/paciente_descrition_antropometria_peso_ideal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/paciente_descrition_antropometria_imc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/paciente_descrition_antropometria_taxa_metabolica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/paciente_descrition_antropometria_valor_metabolico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/paciente_descrition_antropometria_bolso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/paciente_descrition_antropometria_venta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/paciente_descrition_antropometria_agua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
