...

    <TextView
        android:id="@+id/paciente_description_activity_name_paciente_descrition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        app:layout_constraintTop_toBottomOf="@+id/paciente_description_activity_name_paciente_title" />
    <TextView
        android:id="@+id/paciente_description_activity_idade_paciente_descrition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        app:layout_constraintTop_toBottomOf="@+id/paciente_description_activity_picture_paciente" />
    <TextView
        android:id="@+id/paciente_description_activity_height_paciente_descrition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        app:layout_constraintTop_toBottomOf="@+id/paciente_description_activity_height_paciente_title" />
    <TextView
        android:id="@+id/paciente_description_activity_peso_paciente_descrition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        app:layout_constraintTop_toBottomOf="@+id/paciente_description_activity_peso_paciente_title" />
    <TextView
        android:id="@+id/paciente_description_activity_peso_ideal_paciente_descrition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <TextView
        android:id="@+id/paciente_description_activity_fone_paciente_descrition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <TextView
        android:id="@+id/paciente_description_activity_email_paciente_descrition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <TextView
        android:id="@+id/paciente_description_activity_observation_paciente_descrition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...

    <Button
        android:id="@+id/paciente_description_activity_button_antropometric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <Button
        android:id="@+id/paciente_description_activity_button_patologic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/paciente_description_activity_nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/paciente_description_activity_fab_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
