<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/popup_delete_confirm_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/popup_delete_confirm_layout_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/confirm_remove_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/popup_delete_confirm_layout_confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sim"
        app:layout_constraintStart_toStartOf="@+id/popup_delete_confirm_layout_textView"
        app:layout_constraintTop_toBottomOf="@+id/popup_delete_confirm_layout_textView" />

    <Button
        android:id="@+id/popup_delete_confirm_layout_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/nao"
        app:layout_constraintEnd_toEndOf="@+id/popup_delete_confirm_layout_textView"
        app:layout_constraintStart_toEndOf="@+id/popup_delete_confirm_layout_confirm_button"
        app:layout_constraintTop_toTopOf="@+id/popup_delete_confirm_layout_confirm_button" />
</androidx.constraintlayout.widget.ConstraintLayout>